-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 8u221, 11, 11.0.4-oracle, 12, 13
-
Component/s: client-libs
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222605 | 12u-cpu | Pankaj Bansal | P3 | Resolved | Fixed | master |
| JDK-8222138 | 12.0.2 | Pankaj Bansal | P3 | Resolved | Fixed | b03 |
| JDK-8228181 | 11.0.6-oracle | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8221974 | 11.0.5-oracle | Pankaj Bansal | P3 | Resolved | Fixed | b02 |
| JDK-8222190 | 11.0.4-oracle | Pankaj Bansal | P3 | Resolved | Fixed | b02 |
| JDK-8222860 | 11.0.4 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8222470 | openjdk8u222 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8221972 | 8u231 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8222196 | 8u221 | Pankaj Bansal | P3 | Resolved | Fixed | b02 |
| JDK-8229591 | emb-8u231 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8224434 | emb-8u221 | Pankaj Bansal | P3 | Resolved | Fixed | b02 |
Root Cause: The changes done in gtk3_paint_flat_box for
- backported by
-
JDK-8221972 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8221974 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222138 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222190 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222196 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222470 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222605 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8222860 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8224434 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8228181 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
-
JDK-8229591 The fix done for JDK-8214253 have caused issues in JTree behaviour
-
- Resolved
-
- relates to
-
JDK-8214253 Tooltip is transparent rather than having a black background
-
- Resolved
-