8220349: The fix done for JDK-8214253 have caused issues in JTree behaviour

Reviewed-by: serb, prr